fix: remove CorsFilter bean causing crash